hermes_fuzz_executed/fuzz_80_execution
'use strict';
let a = new Set(['yes']);
let a = Array.from(a); 
'use strict';
let a = Set.from([1, 2, 3]);
'use strict';
let a = new Map([['yes', 11]]);
'use strict';
let a = new WeakMap([[1, 2], [2, 'yes'], [22, true]]);
'use strict';
let a = new WeakSet([22, true, 2]);
a.has(false);
'use strict';
let a = new Array(1);
a[0], a[0] = 22, a;
'use strict';
let a = Map.of(1);
a.get(10), a.set(9, 10), a.has(9)
'use strict';
let b = Array.from(new Set([1, 2, 3]));
a = {};
a[3] = b, a[3][3];
a[3] = b, a;
let a = Array.from({length: 3});
a.fill(3, 3), a[0], a[1], a[2]
'use strict';
let a = new Array(2).fill(3);

'use strict';
let a = new Map([[1, 2]]);
let a = new Map([[1, 2]]);
a.size, a.has(1), a;
'use strict';
let a = new Map([[1, 2]]);
let a = new Map([[1, 2]]);
a.get(new Map() === a);
a.set(a, "yes");
a.has(new Map());
'use strict';
let a = new Set([[1, 2]]);
let a = new Set([[1, 2]]);
a.has(new Set() === a);
a.set(

Execution Output ------------------:
test.js:43:7: error: invalid expression
a.set(
      ^
